syntax = "proto3";

package rivet.backend.pkg.faker.job_run;

import "proto/common.proto";
import "svc/pkg/job-run/types/msg/create.proto";

message Request {
	optional rivet.common.Uuid run_id = 2;
	optional rivet.common.Uuid region_id = 1;
	repeated rivet.backend.pkg.job_run.msg.create.ProxiedPort proxied_ports = 3;
	optional string job_spec_json = 4;
}

message Response {
	rivet.common.Uuid run_id = 1;
	rivet.common.Uuid region_id = 2;

	// The expected response to be returned from the HTTP server.
	string test_server_response = 3;
	uint32 test_server_port = 4;
}
